tests/pass/no-unimported-text.tsx
import { Button, Text } from "@/components/ui/text";

const view = <Text>Imported component</Text>;
