tests/fail/no-unimported-text-renamed.tsx
import { Text as Label } from "@/components/ui/text";

const view = <Text />;
